crates/hir-ty/tests/snapshots/jls_decl_checks__local_class_redeclared_in_two_initializers.snap
---
source: crates/hir-ty/tests/jls_decl_checks.rs
expression: out
---
FILE /src/com/example/Locals.java:
package com.example;

class Locals {
    static { class S {} }
    static { class S {} }
    { class I {} }
    { class I {} }
}
