crates/hir-ty/tests/snapshots/jls_decl_checks__multiple_public_classes.snap
---
source: crates/hir-ty/tests/jls_decl_checks.rs
assertion_line: 369
expression: out
---
FILE /src/com/example/A.java:
package com.example;

public class A {}
public class B {}

method : class-public-should-be-in-file: @3:13class B is public, should be declared in a file named B.java
