crates/hir-ty/tests/snapshots/jls_decl_checks__override_annotation.snap
---
source: crates/hir-ty/tests/jls_decl_checks.rs
expression: out
---
FILE /src/com/example/Base.java:
package com.example;

class Base {
    void run() {}
    static void hide() {}
}

class Derived extends Base {
    @Override
    void run() {}

    @Override
    void missing() {}

    @Override
    static void hide() {}
}

method missing: method-does-not-override: @12:9Method 'missing()' annotated @Override does not override or implement a method from a supertype
method hide: method-does-not-override-static: Static method 'hide()' cannot be annotated with @Override
