crates/hir-ty/tests/snapshots/jls_decl_checks__override_annotation_overload.snap
---
source: crates/hir-ty/tests/jls_decl_checks.rs
expression: out
---
FILE /src/com/example/Base.java:
package com.example;

class Base {
    void f(long x) {}
}

class Derived extends Base {
    @Override
    void f(int x) {}

    @Override
    void g(java.lang.String s) {}
}

method f: method-does-not-override: Method 'f()' annotated @Override does not override or implement a method from a supertype
method g: method-does-not-override: Method 'g()' annotated @Override does not override or implement a method from a supertype
