crates/hir-ty/tests/snapshots/jls_decl_checks__override_raw_generic_interface.snap
---
source: crates/hir-ty/tests/jls_decl_checks.rs
expression: out
---
FILE /src/com/example/Conv.java:
package com.example;

import org.apache.commons.beanutils.Converter;

class Conv implements Converter {
    @Override
    public Object convert(Class type, Object value) {
        return value;
    }
}

@4:22: raw-type-use: Raw use of parameterized class 'Converter'
