crates/hir-ty/tests/snapshots/jls_decl_checks__override_raw_interface_nested.snap
---
source: crates/hir-ty/tests/jls_decl_checks.rs
expression: out
---
FILE /src/com/example/Outer.java:
package com.example;

import org.apache.commons.beanutils.Converter;

class Outer {
    private static final class Conv implements Converter {
        @Override
        public Object convert(Class type, Object value) {
            return value;
        }
    }
}

@5:47: raw-type-use: Raw use of parameterized class 'Converter'
